docs: rewrite README + CLAUDE for the API-only 5.0.0 layout
Both described the now-removed Java pipeline and CLI. Rewritten for the reality
that this repo ships only name-parser-api (model + NameParser/ParseResult
contract + NameFormatter/RankUtils/UnicodeUtils):

- README: single-artifact usage, the return-based ParseResult idioms, a 4.x->5.0
  migration section, and a section on the Rust engine
  (github.com/gbif/name-parser-rust) with the NameParserRust Panama binding.
- CLAUDE: replace the pipeline/StripAndStash/CodeInference/Assemble internals and
  the authorship-parsing conventions (all now in the Rust repo) with a concise
  model + contract guide and pointers to name-parser-rust, the 4.x and 3.x lines.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>